@@ -174,7 +174,7 @@ bool mrcal_rectified_resolution( // output and input
 // The equivalent function in Python is _rectified_system_python() in stereo.py
 //
 // Documentation is in the docstring of mrcal.rectified_system()
-bool mrcal_rectified_system(// output
+bool mrcal_rectified_system2(// output
                             unsigned int*     imagersize_rectified,
                             double*           fxycxy_rectified,
                             double*           rt_rect0_ref,
@@ -192,6 +192,9 @@ bool mrcal_rectified_system(// output
                             mrcal_point2_t* azel0_deg,
 
                             // input
+                            // we refuse to create a view this close to az=90 or az=-90
+                            const double             az_edge_margin_deg,
+                            // Intrinsics used only for pixels_per_deg detection
                             const mrcal_lensmodel_t* lensmodel0,
                             const double*            intrinsics0,
 
@@ -346,7 +349,6 @@ bool mrcal_rectified_system(// output
     // Done with the geometry! Now to get the az/el grid. I need to figure
     // out the resolution and the extents
 
-    const double az_edge_margin_deg = 20.0;
     // I loosen the checks a bit, so that the checks pass after the correction
     // despite any float error that might exist
     const double az_edge_margin_deg_loose = az_edge_margin_deg - 1e-3;
@@ -478,6 +480,69 @@ bool mrcal_rectified_system(// output
 
     return true;
 }
+
+// legacy function. Uses az_edge_margin_deg=20.0 without providing an argument
+bool mrcal_rectified_system(// output
+                            unsigned int*     imagersize_rectified,
+                            double*           fxycxy_rectified,
+                            double*           rt_rect0_ref,
+                            double*           baseline,
+
+                            // input, output
+                            // > 0: use given value
+                            // < 0: autodetect and scale
+                            double* pixels_per_deg_az,
+                            double* pixels_per_deg_el,
+
+                            // input, output
+                            // if(..._autodetect) { the results are returned here }
+                            mrcal_point2_t* azel_fov_deg,
+                            mrcal_point2_t* azel0_deg,
+
+                            // input
+                            // Intrinsics used only for pixels_per_deg detection
+                            const mrcal_lensmodel_t* lensmodel0,
+                            const double*            intrinsics0,
+
+                            const double*            rt_cam0_ref,
+                            const double*            rt_cam1_ref,
+
+                            const mrcal_lensmodel_type_t rectification_model_type,
+
+                            bool   az0_deg_autodetect,
+                            bool   el0_deg_autodetect,
+                            bool   az_fov_deg_autodetect,
+                            bool   el_fov_deg_autodetect)
+{
+    const double az_edge_margin_deg = 20.0;
+    return mrcal_rectified_system2(// output
+                            imagersize_rectified,
+                            fxycxy_rectified,
+                            rt_rect0_ref,
+                            baseline,
+                            // input, output
+                            // > 0: use given value
+                            // < 0: autodetect and scale
+                            pixels_per_deg_az,
+                            pixels_per_deg_el,
+                            // input, output
+                            // if(..._autodetect) { the results are returned here }
+                            azel_fov_deg,
+                            azel0_deg,
+
+                            // input
+                            az_edge_margin_deg,
+                            lensmodel0,
+                            intrinsics0,
+                            rt_cam0_ref,
+                            rt_cam1_ref,
+                            rectification_model_type,
+                            az0_deg_autodetect,
+                            el0_deg_autodetect,
+                            az_fov_deg_autodetect,
+                            el_fov_deg_autodetect);
+}
+
 
 static
 void set_rectification_map_pixel(// output
